--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,12 @@ repositories {
 dependencies {
 }
 
+jar  {
+    manifest {
+        attributes 'Main-Class': 'ml.melonz.histacomrm.HistacomRewrite'
+    }
+}
+
 license {
     header file('HEADER.txt')
     strictCheck true
